@@ -28,6 +28,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22748) Add anchors on Special:ListGroupRights  
 * (bug 21981) Add parameter 'showfilename' to <gallery> to automatically apply
   the names of the individual files within the gallery
+* (bug 12797) Add $wgGalleryOptions for adjusting of default gallery display
+  options
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive without
